--- a/README.hbs
+++ b/README.hbs
@@ -25,6 +25,8 @@ npm install spyo --save
 
 ## Example
 ```javascript
+const Spyo = require('spyo');
+
 const myObject = {
     firstName: 'Mike',
     lastName: 'Red'
